# kanshi

./: .build.yml  README.md  config.c  ctl.c  event-loop.c  ipc-addr.c  ipc.c  kanshi.1.scd  kanshi.varlink  main.c  meson.build  parser.c
doc/: kanshi.5.scd
include/: config.h  ipc.h  kanshi.h  parser.h
protocol/: meson.build
